--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -4,4 +4,4 @@ pt-BR:
       title: "Desculpas não bastam. Queremos ação."
       description: "8 mulheres vítimas de abuso em 8 dias. Chegou a hora do Metrô gritar: não passarão!"
     twitter:
-      tweet: "Alô, @metrosp_oficial! Use a verba de publicidade contra abusos em trens e estações! bit.ly/nãopassarão"
+      tweet: "Eu quero a #DesmilitarizaçãodaJustiça. Pressione também: "
