[#74981458] change Facebook share data

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,7 +1,7 @@
 pt-BR:
   share:
     facebook:
-      title: "Desculpas não bastam. Queremos ação."
-      description: "8 mulheres vítimas de abuso em 8 dias. Chegou a hora do Metrô gritar: não passarão!"
+      title: "Vamos acabar com mais uma aberração autoritária"
+      description: "Veja o que você pode fazer para se unir a missão"
     twitter:
       tweet: "Eu quero a #DesmilitarizaçãodaJustiça. Pressione também: "
