--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,7 +1,7 @@
 pt-BR:
   share:
     facebook:
-      title: "Vamos acabar com mais uma aberração autoritária"
-      description: "Veja o que você pode fazer para se unir a missão"
+      title: "Um Tribunal Militar ainda pode te julgar"
+      description: "Uma decisão histórica está sendo tomada em Brasília. De que lado você está?"
     twitter:
       tweet: "Eu quero a #DesmilitarizaçãodaJustiça. Pressione também: "
