--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -4,4 +4,4 @@ pt-BR:
       title: "Um Tribunal Militar ainda pode te julgar"
       description: "Uma decisão histórica está sendo tomada em Brasília. De que lado você está?"
     twitter:
-      tweet: "Eu quero a #DesmilitarizaçãodaJustiça. Pressione também: "
+      tweet: "Inscreva-se na missão pela #DesmilitarizaçãodaJustiça "
